[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/ui/LineParticle.gd" type="Script" id=1]
[ext_resource path="res://utils/MultiAudioPlayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/sfx/menu/button_popup.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sfx/menu/click_sfx/button_click_2.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sfx/menu/click_sfx/button_click_1.wav" type="AudioStream" id=7]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.701422, 1 ), 0.0639727, 0.0, 0, 0 ]

[sub_resource type="AudioStreamRandomPitch" id=2]
resource_local_to_scene = true

[node name="LineParticle" type="Node2D"]
script = ExtResource( 1 )

[node name="Line2D" type="Line2D" parent="."]
width = 5.0
width_curve = SubResource( 1 )
default_color = Color( 1, 1, 1, 1 )
begin_cap_mode = 2
end_cap_mode = 2

[node name="Tween" type="Tween" parent="."]

[node name="StartSFX" parent="." instance=ExtResource( 2 )]
stream = SubResource( 2 )
audio_streams = [ ExtResource( 3 ) ]

[node name="EndSFX" parent="." instance=ExtResource( 2 )]
stream = SubResource( 2 )
audio_streams = [ ExtResource( 6 ), ExtResource( 7 ) ]

[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
